# src/models/filter.model.ts
@@ -1,0 +1,7 @@
+export interface Filter {
+    feedId: number;
+    exclude?: string[];
+    seasonStart?: number
+    episodeStart?: number
+    showName?: string
+}
